--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -33,12 +33,12 @@
           <%# <%= form_with model: モデル名,local: true do |f|%>
             <div class="field">
               <%# <%= f.label :hoge, "コメント" %><br />
-              <%# <%= f.text_field :hoge, id:"comment_text" %>
+              <%# <%= f.text_field :hoge, id:"comment_content" %>
             </div>
             <div class="actions">
               <%# <%= f.submit "送信する", class: :form__btn  %>
             </div>
-          <%# <% end %> 
+          <%# <% end %>
         <%# // ログインしているユーザーには上記を表示する %>
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
