--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -1,23 +1,26 @@
-<%= form_with model: モデル名, local: true do |f|%>
+<%= form_with(model: @prototype, local: true) do |f|%>
   <div class="field">
-    <%= f.label :hoge, "プロトタイプの名称" %><br />
-    <%= f.text_field :hoge, id:"prototype_title" %>
+    <%= f.label :title, "プロトタイプの名称" %>  
+    <%# 0922：labelの第一引数は、prototypesテーブルのカラムであっているかメンターさんに聞く%>
+    <%= f.text_field :title, id:"prototype_title" %>
   </div>
 
   <div class="field">
-    <%= f.label :hoge, "キャッチコピー" %><br />
-    <%= f.text_area :hoge, class: :form__text, id:"prototype_catch_copy" %>
+    <%= f.label :catch_copy, "キャッチコピー" %>
+    <%= f.text_area :catch_copy, class: :form__text, id:"prototype_catch_copy" %>
   </div>
 
   <div class="field">
-    <%= f.label :hoge, "コンセプト" %><br />
-    <%= f.text_area :hoge, class: :form__text, id:"prototype_concept" %>
+    <%= f.label :concept, "コンセプト" %>
+    <%= f.text_area :concept, class: :form__text, id:"prototype_concept" %>
   </div>
 
   <div class="field">
-    <%= f.label :hoge, "プロトタイプの画像" %><br />
-    <%= f.file_field :hoge, id:"prototype_image" %>
+    <%= f.label :image, "プロトタイプの画像" %>
+    <%= f.file_field :image, id:"prototype_image" %>
+    <%#画像を保存するボタンがあるのがここ？%>
   </div>
+
 
   <div class="actions">
     <%= f.submit "保存する", class: :form__btn  %>
