--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,10 +1,13 @@
 <div class="card">
-  <%= link_to image_tag("プロトタイプの画像", class: :card__img ), root_path%>
+  <%= link_to image_tag(prototype.image, class: :card__img ), root_path%>
+  <%# link_toとimage_tagの合わせ技 %>
   <div class="card__body">
-    <%= link_to "プロトタイプのタイトル", root_path, class: :card__title%>
+    <%= link_to "プロトタイプのタイトル", root_path, class: :card__title %>
     <p class="card__summary">
       <%= "プロトタイプのキャッチコピー" %>
     </p>
-    <%= link_to "by プロトタイプの投稿者名", root_path, class: :card__user %>
+    <%= link_to "by プロトタイプの投稿者名", root_path,  class: :card__user %>
   </div>
 </div>
+
+
