--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -8,6 +8,11 @@
         <%= link_to  "", root_path, class: :greeting__link%>
     <% end %>
     <div class="card__wrapper">
+      <% @prototypes.each do |prototype| %>
+        <%= render partial: "prototype", locals: { prototype: prototype } %>
+      <% end %>
+      <%# 0923このままだと NoMethodErrorが出るここでは解決%できなそうなのでコントローラーに問題があるのでは？>
+
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
     </div>
   </div>
