プロトタイプ情報の編集機能を実装

--- a/app/views/prototypes/new.html.erb
+++ b/app/views/prototypes/new.html.erb
@@ -3,6 +3,7 @@
     <div class="form__wrapper">
       <h2 class="page-heading">新規プロトタイプ投稿</h2>
         <%= render partial: "form", local: { prototype: @prototype} %>
+        <%#部分テンプレートと呼ばれるところ、"form"と簡単に表記されているのは_fotmが分けられたviewだから%>
     </div>
   </div>
 </div>
