Commentモデルおよびテーブルを作成

--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -12,7 +12,7 @@
         <%= render partial: "prototype", locals: { prototype: prototype } %>
       <% end %>
       <%# 0923このままだと NoMethodErrorが出るここでは解決%できなそうなのでコントローラーに問題があるのでは？>
-
+      <%# ここの"prototype"は_prototypeにつながっている？>
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
     </div>
   </div>
