--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,19 +8,19 @@
         <tbody>
           <tr>
             <th class="table__col1">名前</th>
-            <td class="table__col2"><%= "ユーザー名" %></td>
+            <td class="table__col2"><%= @user.name %></td><%# 1%>
           </tr>
           <tr>
             <th class="table__col1">プロフィール</th>
-            <td class="table__col2"><%= "ユーザーのプロフィール" %></td>
+            <td class="table__col2"><%= @user.profile %></td>
           </tr>
           <tr>
             <th class="table__col1">所属</th>
-            <td class="table__col2"><%= "ユーザーの所属" %></td>
+            <td class="table__col2"><%= @user.occupation %></td>
           </tr>
           <tr>
             <th class="table__col1">役職</th>
-            <td class="table__col2"><%= "ユーザーの役職" %></td>
+            <td class="table__col2"><%= @user.position %></td>
           </tr>
         </tbody>
       </table>
@@ -28,8 +28,20 @@
         <%= "ユーザー名さんのプロトタイプ"%>
       </h2>
       <div class="user__card">
-        <%# 部分テンプレートでそのユーザーが投稿したプロトタイプ投稿一覧を表示する %>
+        <%= render partial: 'prototypes/prototype', collection: @user.prototypes %><%# 2%>
       </div>
     </div>
   </div>
 </div>
+<%# 1 <%= @user.name %><%#だけでユーザーの情報が引き出せるのは、@userを使用しているから？
+今回は、User.find(params[:id])でdbから大きな箱を取り出しているのであとは
+ここのviewで大きな箱から欲しい情報（小さい情報を）を取り出していく%>
+
+
+
+
+<%# 2レンダーでprototypeのviewの_prototypeを呼び出したい！%>
+<%# 今回はprototypeのdbから情報を取得したいので、'prototypes/prototype'で指定する
+この内容は、prototypesはコントローラー名で/prototypeは部分テンプレートのこと「_prototype」の「_」は無くてOK！
+そこからUserコントローラーのshowで記述済みの@userを使用が可能になる、何故か？
+理由はアソシエーションが使えるこれは、@userがUserモデルを介しているからできること%>
