commit提出エラー解消削除ボタン

--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,13 +4,16 @@
       <p class="prototype__hedding">
         <%= "プロトタイプのタイトル"%>
       </p>
-      <%= link_to "by プロトタイプの投稿者", user_path(@prototype.user_id), class: :prototype__user %>
+      <%= link_to "by プロトタイプの投稿者", user_path(@uprototype.ser_id), class: :prototype__user %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__manage">
-          <%= link_to "編集する", edit_prototype_path(@prototype.user_id), class: :prototype__btn %><%# ここのクラスはCSSで装飾するためのもの%>
+          <%= link_to "編集する", edit_prototype_path(@prototype.id), class: :prototype__btn %><%# ここのクラスはCSSで装飾するためのもの%><%#1%>
           <%= link_to "削除する", prototype_path(@prototype.id), class: :prototype__btn, method: :delete %>
         </div> <%# rails routesでVerにGETではないものはmethod: を記述する必要がある%>
       <% end %>
+          <%#1, ここが今回欲しい情報はカラムのid、パスがidを求めているからモデルから該当するカラムを選択した%>
+
+
       <%# // プロトタイプの投稿者とログインしているユーザーが同じであれば上記を表示する %>
       <div class="prototype__image">
         <%= image_tag  @prototype.image %>
