--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -2,9 +2,9 @@
   <div class="inner">
     <div class="prototype__wrapper">
       <p class="prototype__hedding">
-        <%= "プロトタイプのタイトル"%>
+        <%= @prototype.title %>
       </p>
-      <%= link_to "by プロトタイプの投稿者", user_path(@prototype.user_id), class: :prototype__user %>
+      <%= link_to @prototype.user.name, user_path(@prototype.user_id), class: :prototype__user %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__manage">
           <%= link_to "編集する", edit_prototype_path(@prototype.id), class: :prototype__btn %><%# ここのクラスはCSSで装飾するためのもの%><%#1%>
@@ -22,13 +22,13 @@
         <div class="prototype__detail">
           <p class="detail__title">キャッチコピー</p>
           <p class="detail__message">
-            <%= "プロトタイプのキャッチコピー" %>
+            <%= @prototype.catch_copy %>
           </p>
         </div>
         <div class="prototype__detail">
           <p class="detail__title">コンセプト</p>
           <p class="detail__message">
-            <%= "プロトタイプのコンセプト" %>
+            <%= @prototype.concept %>
           </p>
         </div>
       </div>
@@ -49,7 +49,7 @@
           <% @comments.each do |comment| %>
             <li class="comments_list">
                <%= comment.text %><%# ここがコメント（）textの中身で表示される%>
-               <%= link_to comment.user.name, root_path, class: :comment_user %>
+               <%= link_to comment.user.name, user_path(@prototype.user.id), class: :comment_user %><%#root_pathここをuser/showに遷移させたい%>
             </li>
           <% end %>
         </ul>
