--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="inner">
     <div class="user__wrapper">
       <h2 class="page-heading">
-        <%= "ユーザー名さんの情報"%>
+        <%= @user.name%><a>さんの情報</a>
       </h2>
       <table class="table">
         <tbody>
@@ -25,7 +25,7 @@
         </tbody>
       </table>
       <h2 class="page-heading">
-        <%= "ユーザー名さんのプロトタイプ"%>
+        <%= @user.name %><a>さんのプロトタイプ</a>
       </h2>
       <div class="user__card">
         <%= render partial: 'prototypes/prototype', collection: @user.prototypes %><%# 2%>
